# discord-update-alert

./: Cargo.toml  README.md  dockerfile
src/: TELstonk.html  main.rs
src/api/: api_calls.rs
src/models/: feed_item.rs  mod.rs  vault_response.rs
src/repositories/: help_functions.rs  mod.rs  mongodb_repo.rs  request_repo.rs
